[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/base/Base.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Asset/red_button01.png" type="Texture" id=3]
[ext_resource path="res://Asset/green_button00.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.25, 30.75 )

[node name="Base" type="Area2D"]
script = ExtResource( 1 )

[node name="BaseTexture" type="AnimatedSprite" parent="."]
position = Vector2( 512, 300 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 512, 300 )
shape = SubResource( 2 )

[node name="HealthBar" type="TextureProgress" parent="."]
margin_left = 416.0
margin_top = 194.0
margin_right = 606.0
margin_bottom = 243.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[connection signal="input_event" from="." to="." method="_on_Base_input_event"]
